@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
   - make multiple tags a warning only
   - install with Module::Build instead of MakeMaker
   - use Archive::Extract instead of tar
+  - use recursive Path::Class::File#remove and Path::Class::Dir#remove instead of calling system rm -rf
 
 0.07      2013-10-18 12:41:40 -0400
   - make git 1.5.0 or better a requirement
